
- Added the observation type COSMIC_ELECTRON_DENSITY to the obs_def_upper_atm_mod

- dart_to_clm and clm_to_dart were resurrected to correctly handle conversions
  for the SWE (snow water equivalent) field.

- Updated the channel and column location modules to be compatible with
  the current required interfaces.

- Updated the model_mod_check.f90 program (most often used when porting
  DART to a new model).  there is now more control over exactly which
  tests are being run.  updated the nml and html documentation files to
  match the current code and describe the tests in more detail.

- Fixed a misleading status message in the obs_sequence_tool when all obs
  are excluded by the min/max lon/lat box namelist items.  the incorrect
  message blamed it on observation height instead of the bounding box.

- Added some additional debugging options to the mpi utilities module.
  if you have problems that appear to be MPI related, contact us for
  more help in enabling them.

- Improved some error messages in location_io_mod and state_structure_mod

++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ Nov 20 2017 :: 1D obs_diag fix, 1D power forward operator $Revision$
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

- fixed a problem with tutorial section 18 - bad URL.

- fixed a problem with the 1D version of the observation diagnostics program
  when trying to run diagnostics on identity observations.

- all models with a workshop_setup.csh now build the same set of programs.
  (some/most did not build obs_diag - which is used in the tutorial)

- added a 1D power forward operator.
  
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+ MMM DD YYYY :: summary of next changes                    $Revision$
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++

# <next few lines under version control, do not edit>
# $URL$
# $Revision$
# $Date$