@@ -5,6 +5,7 @@
 ! $Id$
 
 ! BEGIN DART PREPROCESS KIND LIST
+!RAW_STATE_VARIABLE,           QTY_STATE_VARIABLE,        COMMON_CODE
 !VELOCITY,                     QTY_VELOCITY,              COMMON_CODE
 !TRACER_CONCENTRATION,         QTY_TRACER_CONCENTRATION,  COMMON_CODE
 !TRACER_SOURCE,                QTY_TRACER_SOURCE,         COMMON_CODE
