@@ -580,7 +580,7 @@ Single File I/O:
 - Improved some error messages in location_io_mod and state_structure_mod
 
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
-+ Nov 20 2017 :: 1D obs_diag fix, 1D power forward operator $Revision$
++ Nov 21 2017 :: 1D obs_diag fix, 1D power forward operator    Revision: 12123 
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
 - fixed a problem with tutorial section 18 - bad URL.
@@ -593,6 +593,11 @@ Single File I/O:
 
 - added a 1D power forward operator.
   
+- updates to the matlab plotting routines for NetCDF observation formats
+
+- World Ocean Database (WOD) converter supports partial year conversions
+  and 2013 file formats.
+
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 + MMM DD YYYY :: summary of next changes                    $Revision$
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
